<resources>
    <string name="app_name">Inventory</string>

    <!-- Menu strings -->
    <!-- Label for overflow menu option that inserts fake inventory data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all inventory data in the app  -->
    <string name="action_delete_all_entries">Delete All Inventory</string>
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current item  -->
    <string name="action_delete">Delete</string>

    <!-- Dummy data for insert -->
    <!-- Dummy product name  -->
    <string name="dummy_name">Book of Happiness</string>
    <!-- Dummy price -->
    <string name="dummy_price">10</string>
    <!-- Dummy quantity -->
    <string name="dummy_quantity">5</string>
    <!-- Dummy supplier name -->
    <string name="dummy_supplier">Amazon</string>
    <!-- Dummy phone number -->
    <string name="dummy_phone">18882804331</string>

    <!-- Xml strings -->
    <string name="main_title">Inventory Application</string>
    <string name="sub_title">Add Inventory</string>
    <string name="inventory_image">Shopping cart with boxes</string>
    <string name="dbname">SQLite</string>
    <string name="table_desc"> Table name: Inventory</string>
    <string name="db_types">Description of database table types</string>
    <string name="reduce_quantity_btn">Decrease quantity button</string>
    <string name="increase_quantity_btn">Increase quantity button</string>
    <string name="oldphone">Old fashioned desk phone</string>

    <!-- Edit activity strings -->
    <!-- Title for the activity to add a new item -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to edit an existing item  -->
    <string name="editor_activity_title_edit_product">Edit Inventory</string>
    <!-- Label for editor menu option to save item and leave editor  -->

    <!-- Toast messages -->
    <!--  CatalogActivity Toasts -->
    <string name="quantity_change_inventory_failed">There are no products</string>
    <string name="quantity_change_inventory_success">Quantity reduced by 1</string>
    <string name="item_delete_success">Item deleted successfully</string>

    <!-- Toast message in editor when current inventory item was successfully deleted  -->
    <string name="editor_delete_inventory_successful">Inventory deleted</string>
    <!-- Toast message in editor when current inventory item has failed to be deleted  -->
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>
    <!-- Toast message in editor when new inventory item has been successfully inserted  -->
    <string name="editor_insert_inventory_successful">Inventory saved</string>
    <!-- Toast message in editor when new inventory item has failed to be inserted  -->
    <string name="editor_insert_inventory_failed">Error with saving inventory</string>
    <!-- Toast message in editor when current inventory item was successfully updated  -->
    <string name="editor_update_inventory_successful">Inventory updated</string>
    <!-- Toast message in editor when current inventory item has failed to be updated  -->
    <string name="editor_update_inventory_failed">Error with updating inventory</string>

    <!-- Dialog messages -->
    <!-- Dialog message when user is leaving editor but hasn't saved changes  -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes  -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current inventory item -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current inventory item  -->
    <string name="delete_dialog_msg">Delete this inventory?</string>
    <!-- Dialog button text for the option to confirm deleting the current inventory item -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current inventory item -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor -->
    <string name="category_overview">Overview</string>
    <string name="sale_btn">Sale</string>
    <string name="sans_serif_medium">sans-serif-medium</string>
    <string name="sans_serif">sans-serif</string>

    <!-- Hints -->
    <!-- Text hint for name field in the editor  -->
    <string name="product_info">Product Info</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="click_call">Click To Call</string>

    <!-- InventoryCursorAdapter labels for product, price, quantity values -->
    <!-- Cursor set text product -->
    <string name="text_product">Product:&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <!-- Cursor set text price -->
    <string name="text_price">Price:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <!-- Cursor set text quantity -->
    <string name="text_quantity">Quantity:&#160;&#160;&#160;&#160;&#160;&#160;</string>

    <!-- Checks for saving to inventory database -->
    <string name="name_save_failed">Product name must have 1 to 20 characters</string>
    <string name="suppliername_save_failed">Product name must have 1 to 20 characters</string>
    <string name="price_save_failed_null">Price must have a value</string>
    <string name="price_save_failed_double">Price must be in this format: 100.00</string>
    <string name="price_save_failed_toohigh">Price must be less than $10000</string>
    <string name="quantity_save_failed">Quantity must be a positive integer or at least 0</string>


</resources>
