<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the list of inventory -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/main_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorBackground"
            app:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/large"
            android:paddingTop="@dimen/medium"
            android:text="@string/sub_title"
            android:textAppearance="?android:textAppearanceSmall"
            app:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/inventory_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_subtitle_text"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/inventory_image"
            android:src="@drawable/inventory" />

        <TextView
            android:id="@+id/empty_title_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inventory_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/mediumlg"
            android:text="@string/dbname"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorBackground"
            app:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/empty_subtitle_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text2"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/verysmall"
            android:text="@string/table_desc"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorBackground"
            app:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/dbinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_subtitle_text2"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/db_types"
            android:paddingLeft="@dimen/large"
            android:paddingRight="@dimen/large"
            android:src="@drawable/table" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/mediumlg"
        android:layout_marginEnd="@dimen/medium"
        android:src="@drawable/plus"
        app:backgroundTint="@color/white" />

</RelativeLayout>