<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the list of inventory -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    android:paddingTop="@dimen/large"
    android:paddingLeft="@dimen/large"
    android:paddingRight="@dimen/large">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@string/sans_serif_medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorBackground" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@string/sans_serif_medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorBackground"
        android:paddingTop="@dimen/small"/>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@string/sans_serif_medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorBackground"
            android:paddingTop="@dimen/small"
            android:layout_weight="1"
            android:paddingRight="@dimen/vvlarge"
            android:paddingEnd="@dimen/vvlarge"/>

        <Button
            android:id="@+id/salebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_btn"
            app:fontFamily="@string/sans_serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorBackground"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

</LinearLayout>